// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstitutionService getAndUpsertInstitution when institution is already in the database when institution nodes not match should log 1`] = `
[
  [
    "Fetched institution: Roberts LLC",
  ],
  [
    "Roberts LLC is a new institution",
  ],
  [
    "Saving Roberts LLC institution...",
  ],
  [
    "Fetched institution: Langosh - Jacobi",
  ],
  [
    "Institution Mosciski, Langosh and Gislason plaidId does not match plaid institution",
  ],
  [
    "Updating Mosciski, Langosh and Gislason institution...",
  ],
]
`;

exports[`InstitutionService getAndUpsertInstitution when institution is not in the database should log 1`] = `
[
  [
    "Fetched institution: Roberts LLC",
  ],
  [
    "Roberts LLC is a new institution",
  ],
  [
    "Saving Roberts LLC institution...",
  ],
]
`;
